# firmware

./: Cargo.toml  espflash.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
definitions/: messages.yaml  sd.yaml
examples/: adc.rs  dht11.rs  espnow.rs  http_server.rs  http_server_page.html  sntp.rs  tcp.rs  telegraf.rs  wifi.rs
src/: definitions.rs  lib.rs
src/utilities/: channel.rs  init.rs  mod.rs  sd.rs
