[package]
name = "firmware"
version = "0.1.0"
authors = [
    "Gaia Simeoni <>",
    "Leonardo Danelutti <>",
    "Lorenzo Della Giustina <dellagiustina.lorenzo@gmail.com>",
]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
# Esp
esp-idf-hal = { version = "0.43.1" }
esp-idf-svc = { version = "0.48" }
esp-idf-sys = { version = "0.34.1", default-features = false }
embedded-hal = { version = "1.0.0" }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }
embedded-svc = { version = "0.27.1" }
embedded-sdmmc = "0.4.0"

# Libraries
messages = { git = "ssh://git@github.com/Smart-Home-IoT-Project-ESP32/messages.git", default-features = false }

# Generic
heapless = "0.8.0"
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0.86" }
chrono = { version = "0.4.31", default-features = false }
dht-sensor = "0.2.1"

[build-dependencies]
embuild = "0.31.3"
